# KZMiner

./: .gitignore  CMakeLists.txt  README.md
assets/: NOTICE.md
docs/research/: BLOCKNET-RESEARCH.md
packaging/hiveos/: README.md  kzminer-flightsheet-btc09.json
packaging/hiveos/kzminer/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
src/: console_lock.h  console_output.cpp  console_output.h  main.cpp  status_json.cpp  status_json.h  update_check.cpp  update_check.h  version.h.in
src/algo/: algorithm.h
src/algo/argon2id/: argon2id_algorithm.cpp  argon2id_algorithm.h  argon2id_gpu_hasher.cpp  argon2id_gpu_hasher.h
src/algo/blocknet_argon2id/: blocknet_argon2id_algorithm.cpp  blocknet_argon2id_algorithm.h  blocknet_blake2b_test.cu  blocknet_block0_test.cu  blocknet_fillblock_coop_test.cu  blocknet_fillblock_test.cu  blocknet_finalhash_test.cu  blocknet_gpu_hasher.h  blocknet_gpu_kernel.cu  blocknet_gpu_racetest.cpp  blocknet_gpu_selftest.cpp  blocknet_h0_test.cu  blocknet_nextaddr_test.cu  blocknet_shfl_diag.cu  blocknet_shfl_test.cu
src/argon2/: argon2_engine.cpp  argon2_engine.h
src/coins/blocknet/: blocknet_params.h
src/coins/btc09/: btc09_params.h
src/config/: config.cpp  config.h
src/cpu/: cpu_miner.cpp  cpu_miner.h
src/devfee/: devfee_config.h  devfee_source.cpp  devfee_source.h
src/gpu/: gpu_hasher.h  gpu_miner.cpp  gpu_miner.h  gpu_selftest.cpp  gpu_selftest_main.cpp
src/monitor/: status_table.cpp  status_table.h  system_monitor.cpp  system_monitor.h
src/network/: blocknet_pool_client.cpp  blocknet_pool_client.h  blocknet_pool_job_manager.cpp  blocknet_pool_job_manager.h  mining_source.h  pool_client.cpp  pool_client.h  pool_job_manager.cpp  pool_job_manager.h  solo_job_manager.cpp  solo_job_manager.h  work_client.cpp  work_client.h
